2000-12-09  Martin Baulig  <baulig@suse.de>

	* gnome-dump.c, gnome-gen-mimedb.c, gnome-magic.c, gnome-magic.h,
	gnome-metadata.c, gnome-metadata.h, gnome-mime-info.c,
	gnome-mime-info.h, gnome-mime.c, gnome-mime.h: Removed.

2000-12-09  Martin Baulig  <baulig@suse.de>

	* gnomelibs-init.c (libgnome_loadinit): New static function; add
	this as `loadinit' function to libgnome's GnomeModuleInfo and
	call g_thread_init() here.

2000-12-09  Martin Baulig  <baulig@suse.de>

	* gnome-i18n.c: Comment out g_i18n_get_language_list() and
	g_i18n_guess_category_value() until someone with a clue has
	had a look at it.

2000-11-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-util.h (g_file_test): Removed.

	* Makefile.am: Use $(GNOMESUPPORT_INCS) and $(GNOMESUPPORT_LIBS).

2000-09-28  Martin Baulig  <baulig@suse.de>

	* gnome-history.[ch]: Moved to libcompat.

Thu Sep 28 03:34:52 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c, gnome-moz-remote2.c, gnome-util.c, gnomelib-init2.c:
	  use g_getenv instead of getenv

Sun Sep 24 15:32:20 2000  George Lebl <jirka@5z.com>

	* gnome-exec.[ch]:  Improve some docs, and add function to
	  deal with terminals according to user prefs.  Also some stylistic
	  changes.

	* gnome-ditem.c:  Use the gnome-exec function for getting the
	  terminal command line

	* gnome-portability.h.in:  remove the alloca thing as g_alloca is
	  apparently now in glib.  The file is now empty and perhaps
	  should be removed, unless there's further need for it.

Sat Sep 23 17:28:25 2000  George Lebl <jirka@5z.com>

	* gnome-i18n.[ch]:  Add gnome_i18n_push_c_numeric_locale and
	  gnome_i18n_pop_c_numeric_locale functions that do the job of
	  pushing and poping "C" locale to make float<->string conversions
	  work right in other locales.

	* gnome-scores.c, gnome-config.c: use the above

	* gnome-ditem.c: include gnome-url.h to avoid warning

Fri Sep 15 18:47:06 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.[ch]: Launch Type=URL entries, and slight