@@ -848,7 +848,8 @@ int
 main (int argc, char **argv)
 {
   Display *dpy;
-
+  char *def;
+  
   /* Parse arguments ... */
   gnome_program_init("gnome-moz-remote", VERSION, argc, argv, GNOME_PARAM_POPT_TABLE, options, NULL);
 
@@ -873,7 +874,12 @@ main (int argc, char **argv)
 			    raise_p, isLocal))
       exit(0);
 
-    argv[0] = gnome_config_get_string("/gnome-moz-remote/Mozilla/filename=netscape");
+    if (gnome_is_program_in_path ("mozilla"))
+	    def = "/gnome-moz-remote/Mozilla/filename=mozilla";
+    else
+	    def = "/gnome-moz-remote/Mozilla/filename=netscape";
+    
+    argv[0] = gnome_config_get_string(def);
     argv[1] = escaped_url;
     argv[2] = NULL;
     return (gnome_execute_async(NULL, 2, argv) >= 0);
