@@ -1,3 +1,8 @@
+2000-12-26  Miguel de Icaza  <miguel@helixcode.com>
+
+	* gnome-moz-remote.c (main): Give preference to mozilla when
+	autodetecting.
+
 2000-12-09  Martin Baulig  <baulig@suse.de>
 
 	* gnome-dump.c, gnome-gen-mimedb.c, gnome-magic.c, gnome-magic.h,
